--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,21 @@
 /* BASE RULES */
 /**************/
 
+.photo-gallery, .photo-gallery li {
+	list-style: none;
+	padding: 0;
+}
+
+.photo-gallery li {
+	display: inline-block;
+	width: 33%;
+}
+
+.photo-gallery li img {
+	width: 100%;
+}
+
+
 html {
   font-size: 100%;
 }
