--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@
   </head>
   <body>
     
+    {% include header.html %}
+    
     {{ content }}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
