--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,13 @@
     <![endif]-->
   </head>
   <body>
+    <div class="container">
+      
+     {% include header.html %}
     
-    {% include header.html %}
-    
-    {{ content }}
+      {{ content }}
+      
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
