--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,6 @@
 <div class="page-header">
   <h1><img src="{{ site.baseurl}}/images/photo-camera.png"> <small>Krocker Photography</small></h1>
+  
+  <p class="navbar-text navbar-right">Signed in as <a href="#" class="navbar-link">Mark Otto</a></p>
+  
 </div>
