--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,10 @@
 <div class="page-header">
   <h1><img src="{{ site.baseurl}}/images/photo-camera.png"> <small>Krocker Photography</small></h1>
   
-  <p class="navbar-text navbar-right">Signed in as <a href="#" class="navbar-link">Mark Otto</a></p>
+  <p class="navbar-text navbar-right">
+    <a href="{{ site.baseurl }}/" class="navbar-link">About</a>
+    <a href="{{ site.baseurl }}/photography" class="navbar-link">Photography</a>
+    <a href="{{ site.baseurl }}/contact" class="navbar-link">Contact</a>
+  </p>
   
 </div>
