--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <div class="page-header">
+  
   <h1><img src="{{ site.baseurl}}/images/photo-camera.png"> <small>Krocker Photography</small></h1>
   
-  <p class="navbar-text navbar-right">
+  <p class="navbar-right">
     <a href="{{ site.baseurl }}/" class="navbar-link">About</a>
     <a href="{{ site.baseurl }}/photography" class="navbar-link">Photography</a>
     <a href="{{ site.baseurl }}/contact" class="navbar-link">Contact</a>
