--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,24 @@
-<div class="page-header">
-  
-  <h1><img src="{{ site.baseurl}}/images/photo-camera.png"> <small>Krocker Photography</small></h1>
-  
-  <p class="navbar-right">
-    <a href="{{ site.baseurl }}/" class="navbar-link">About</a>
-    <a href="{{ site.baseurl }}/photography" class="navbar-link">Photography</a>
-    <a href="{{ site.baseurl }}/contact" class="navbar-link">Contact</a>
-  </p>
-  
-</div>
+<header role="banner">
+<nav id="navbar-primary" class="navbar" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-primary-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+    <div class="collapse navbar-collapse" id="navbar-primary-collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link</a></li>
+        <li><a href="#">Link</a></li>
+        <li><a href="#"><img id="logo-navbar-middle" src="{{ site.baseurl }}/images/photo-camera.png"></a><br>Krocker Photography</li>
+        <li><a href="#">Link</a></li>
+        <li><a href="#">Link</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+</header><!-- header role="banner" -->
