--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,3 @@
 <div class="page-header">
-  <h1>Example page header <small>Subtext for header</small></h1>
+  <h1><img src="{{ site.baseurl}}/images/photo-camera.png"> <small>Krocker Photography</small></h1>
 </div>
