--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,11 @@
 
 <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
 
+<style>
+  font-family: 'Roboto Condensed', sans-serif;
+  
+</style>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
