--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,8 @@
     
       {{ content }}
       
+     {% include footer.html %}
+      
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
