--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body style="font-family: 'Roboto', sans-serif;">
     <div class="container">
       
      {% include header.html %}
