--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,2 @@
 <hr>
-@ Krocker Photography
+Hosted on <a href="http://www.github" target="_blank">Github</a> / <a href="https://jekyllrb.com" target="_blank">Jekyll</a>
