--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,3 @@
 <div class="page-header">
-  <h1><img src="{{ site.baseurl}}/images/photo-camera.png"> <small>Krocker Photography</small></h1>
+  <a href="{{ site.baseurl }}"><h1><img src="{{ site.baseurl}}/images/photo-camera.png"> <small>Krocker Photography</small></h1></a>
 </div>
