--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,5 @@
 <div class="page-header">
-  <a style="text-decoration: none;" href="{{ site.baseurl }}"><img src="{{ site.baseurl}}/images/photo-camera.png"></a> <h1><small>Krocker Photography</small></h1>
+  <h1><a style="text-decoration: none;" href="{{ site.baseurl }}">
+  <img src="{{ site.baseurl}}/images/photo-camera.png"></a> <small>Krocker Photography</small>
+  </h1>
 </div>
